--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.1.js"></script>
     <script type="text/javascript" src="http://underscorejs.org/underscore.js"></script>
     <script type="text/javascript" src="http://documentcloud.github.com/backbone/backbone.js"></script>
-    <script type="text/javascript" src="/jquery.gridster.js"></script>
-    <script type="text/javascript" src="/graphite.js"></script>
+    <script type="text/javascript" src="jquery.gridster.js"></script>
+    <script type="text/javascript" src="graphite.js"></script>
 </head>
 
 <body>
