add some non-lib-js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="http://documentcloud.github.com/backbone/backbone.js"></script>
     <script type="text/javascript" src="jquery.gridster.js"></script>
     <script type="text/javascript" src="graphite.js"></script>
+    <script type="text/javascript" src="graphdash.js"></script>
 </head>
 
 <body>
