--- a/index.html
+++ b/index.html
@@ -3,38 +3,55 @@
 <head>
     <meta charset="utf-8" />
     <title>GraphDash</title>
-    <link rel="stylesheet" href="jquery.gridster.css">
+    <link rel="stylesheet" type="text/css" href="css/jquery.gridster.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet/less" type="text/css" href="less/graphdash.less">
+    <script type="text/javascript" src="js/less.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.1.js"></script>
     <script type="text/javascript" src="http://underscorejs.org/underscore.js"></script>
     <script type="text/javascript" src="http://documentcloud.github.com/backbone/backbone.js"></script>
-    <script type="text/javascript" src="jquery.gridster.js"></script>
-    <script type="text/javascript" src="graphite.js"></script>
-    <script type="text/javascript" src="graphdash.js"></script>
+    <script type="text/javascript" src="js/jquery.gridster.js"></script>
+    <script type="text/javascript" src="js/graphite.js"></script>
+    <script type="text/javascript" src="js/graphdash.js"></script>
 </head>
 
 <body>
+    <header>
+        <div class="container_8">
+            <div class="grid_2">
+                <h1>GraphDash</h1>
+            </div>
+            <div class="grid_4">
+                <a id="new-graph">new graph</a>
+            </div>
+    </header>
+    <section class="grid ready">
+        <ul>
+            <li class="gs_w" data-row="1" data-col="1" data-sizex="1" data-sizey="1"></li>
+            <li class="gs_w" data-row="2" data-col="1" data-sizex="1" data-sizey="1"></li>
+            <li class="gs_w" data-row="3" data-col="1" data-sizex="1" data-sizey="1"></li>
 
-<div class="grid ready">
-    <ul>
-        <li class="gs_w" data-row="1" data-col="1" data-sizex="1" data-sizey="1"></li>
-        <li class="gs_w" data-row="2" data-col="1" data-sizex="1" data-sizey="1"></li>
-        <li class="gs_w" data-row="3" data-col="1" data-sizex="1" data-sizey="1"></li>
+            <li class="gs_w" data-row="1" data-col="2" data-sizex="2" data-sizey="1"></li>
+            <li class="gs_w" data-row="2" data-col="2" data-sizex="2" data-sizey="2"></li>
 
-        <li class="gs_w" data-row="1" data-col="2" data-sizex="2" data-sizey="1"></li>
-        <li class="gs_w" data-row="2" data-col="2" data-sizex="2" data-sizey="2"></li>
+            <li class="gs_w" data-row="1" data-col="4" data-sizex="1" data-sizey="1"></li>
+            <li class="gs_w" data-row="2" data-col="4" data-sizex="2" data-sizey="1"></li>
+            <li class="gs_w" data-row="3" data-col="4" data-sizex="1" data-sizey="1"></li>
 
-        <li class="gs_w" data-row="1" data-col="4" data-sizex="1" data-sizey="1"></li>
-        <li class="gs_w" data-row="2" data-col="4" data-sizex="2" data-sizey="1"></li>
-        <li class="gs_w" data-row="3" data-col="4" data-sizex="1" data-sizey="1"></li>
+            <li class="gs_w" data-row="1" data-col="5" data-sizex="1" data-sizey="1"></li>
+            <li class="gs_w" data-row="3" data-col="5" data-sizex="1" data-sizey="1"></li>
 
-        <li class="gs_w" data-row="1" data-col="5" data-sizex="1" data-sizey="1"></li>
-        <li class="gs_w" data-row="3" data-col="5" data-sizex="1" data-sizey="1"></li>
-
-        <li class="gs_w" data-row="1" data-col="6" data-sizex="1" data-sizey="1"></li>
-        <li class="gs_w" data-row="2" data-col="6" data-sizex="1" data-sizey="2"></li>
-    </ul>
-</div>
-
-
+            <li class="gs_w" data-row="1" data-col="6" data-sizex="1" data-sizey="1"></li>
+            <li class="gs_w" data-row="2" data-col="6" data-sizex="1" data-sizey="2"></li>
+        </ul>
+    </section>
+    <footer>
+        <div class="container_8">
+            <div class="grid_8">
+            <a href="https://github.com/Lonnen/graphdash">Contribute</a><br />
+            <a href="https://github.com/Lonnen/graphdash/issues">File an issue</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
