--- a/index.html
+++ b/index.html
@@ -27,22 +27,13 @@
     </header>
     <section class="grid ready">
         <ul>
-            <li class="gs_w" data-row="1" data-col="1" data-sizex="1" data-sizey="1"></li>
-            <li class="gs_w" data-row="2" data-col="1" data-sizex="1" data-sizey="1"></li>
-            <li class="gs_w" data-row="3" data-col="1" data-sizex="1" data-sizey="1"></li>
-
-            <li class="gs_w" data-row="1" data-col="2" data-sizex="2" data-sizey="1"></li>
+<!--            <li class="gs_w" data-row="1" data-col="2" data-sizex="2" data-sizey="1"></li>
             <li class="gs_w" data-row="2" data-col="2" data-sizex="2" data-sizey="2"></li>
 
             <li class="gs_w" data-row="1" data-col="4" data-sizex="1" data-sizey="1"></li>
-            <li class="gs_w" data-row="2" data-col="4" data-sizex="2" data-sizey="1"></li>
-            <li class="gs_w" data-row="3" data-col="4" data-sizex="1" data-sizey="1"></li>
+            <li class="gs_w" data-row="2" data-col="1" data-sizex="2" data-sizey="1"></li>
 
-            <li class="gs_w" data-row="1" data-col="5" data-sizex="1" data-sizey="1"></li>
-            <li class="gs_w" data-row="3" data-col="5" data-sizex="1" data-sizey="1"></li>
-
-            <li class="gs_w" data-row="1" data-col="6" data-sizex="1" data-sizey="1"></li>
-            <li class="gs_w" data-row="2" data-col="6" data-sizex="1" data-sizey="2"></li>
+            <li class="gs_w" data-row="2" data-col="6" data-sizex="1" data-sizey="2"></li> -->
         </ul>
     </section>
     <footer>
